offer controller
