# specification/openapi: '3.0.yml
@@ -36,34 +36,6 @@ paths:
           description: Создавать предложения по аренде могут только авторизованные клиенты.
         "400":
           description: Поля заполнены неверно
-
-    delete:
-      tags:
-        - offers
-      summary: Удаление предложения
-      description: Клиент должен быть авторизован и может удалять только свои предложения.
-      responses:
-        "200":
-          description: Предложение успешно удалено.
-        "401":
-          description: Удалять предложения по аренде могут только авторизованные клиенты.
-        "403":
-          description: Удалять можно только свои предложения.
-
-    put:
-        tags:
-          - offers
-        summary: Редактирование предложения
-        description: Клиент должен быть авторизован и может редактировать предложения по аренде, созданные им.
-        responses:
-          "200":
-            description: Предложение успешно отредактировано.
-          "400":
-            description: Валидация не пройдена.
-          "403":
-            description: Нельзя редактировать чужое предложение.
-          "401":
-            description: Редактировать предложения по аренде могут только авторизованные клиенты.
     get:
       tags:
         - offers
@@ -97,6 +69,32 @@ paths:
           description: Ошибка в указании параметра.
         "401":
           description: Получить предложения по аренде могут только авторизованные клиенты.
+    delete:
+      tags:
+        - offers
+      summary: Удаление предложения
+      description: Клиент должен быть авторизован и может удалять только свои предложения.
+      responses:
+        "200":
+          description: Предложение успешно удалено.
+        "401":
+          description: Удалять предложения по аренде могут только авторизованные клиенты.
+        "403":
+          description: Удалять можно только свои предложения.
+    put:
+      tags:
+        - offers
+      summary: Редактирование предложения
+      description: Клиент должен быть авторизован и может редактировать предложения по аренде, созданные им.
+      responses:
+        "200":
+          description: Предложение успешно отредактировано.
+        "400":
+          description: Валидация не пройдена.
+        "403":
+          description: Нельзя редактировать чужое предложение.
+        "401":
+          description: Редактировать предложения по аренде могут только авторизованные клиенты.
 
   /offers/{offerId}/comments?count=50:
     get:
